@@ -10,6 +10,17 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Added support for hidden stories, based on class definitions.  A
+hidden story is one that, by default, does not show up in calls to
+C<find()>.  This is useful for auto-generated story lists where some
+types of stories shouldn't be listed.  For example, this will be used
+immediately by HREF[Krang Sitemap|addons.html] and HREF[Krang
+RSS|addons.html], neither of which should show in most lists.  See
+L<Krang::ElementClass::TopLevel> and L<Krang::Story> for more
+information.  [Peter]
+
+=item *
+
 Upgraded L<IPC::Run> to 0.78, which is now pseudohash-free (later
 versions of Perl complain). [Peter]
 
